Change Log for OpenXava project
===============================

OpenXava 7.3 (2024-4-12)
------------------------
- ZAP web security scanner from OWASP passed at 100%.
- New section in documentation to configure your application to be OWASP compliant.
- Removed the use of eval() and equivalents completely from OpenXava JavaScript code.
- Content Security Policy does not allow the use of eval() in JavaScript code by default.
- New property unsafeEvalInScripts in xava.property to enable the use of eval() in JavaScript.
- Archetypes for creating new projects have error pages and cookies configuration compatible with OWASP.
- DWR engine tuned to remove the use of eval() in its JavaScript code.
- Fixed 1 critical security vulnerability in dependencies, now we have 0 vulnerabilities.
- Fixed 2 critical security vulnerabilities in third party JavaScript libraries.
- A X button in each tab to close the latest visited modules on top.
- Navigation in collections with buttons to see the next or previous record from the dialog.
- Dialogs fit in the screen, so dialog bottom buttons are always visible without scrolling.
- Single number typed in a date editor is assumed as day, with current month/year auto-completed.
- @Email and @EmailList editors use a mask to ensure in real time that the emails are correctly typed.
- New and modern Dark theme.
- The width of the calendar in list mode dynamically adjusts to occupy the entire available space.
- Year navigation buttons added to calendar list format for fast year navigation to distant dates.
- When several dates in an entity the user can choose which to use in calendar list format with a combo.
- Drag & drop support for calendar list format.
- Support for java.time.LocalTime as a type for properties, with a special editor for time.
- Improved editor for the time part of DateTimeSeparatedCalendar including a popup to change the time.