@@ -1,94 +1,0 @@
-The automated tests in this project do not include date calendar editor JavaScript popup. 
-Therefore, when you touch dateCalendarEditor.js, dateCalendarEditor.jsp, dateTimeCombinedCalendar.jsp,
-dateTimeSeparatedCalendar.jsp, the part of date filtering in list.jsp or the method openxava.listenChanges
-of openxava.js you have to test it visually at least for the next cases:
-
-- "Data changed" message on going list mode: Use Order or any entity with a date (not the first focusable field) in detail mode. 
-	- Lose the focus of date, without change it, then go to list. No message shown.
-	- Use the dialog to select the current date, then go to list. No message shown.
-	- Use the dialog to select any date, then go to list. A message shown.
-	- Go first record, go previous record (a message "We already are at the beginning of the list" is shown).
-	- Focus on date. Go to list mode. No message shown.
-- Dialog + Enter: User Order in the following order:
-	- Order detail mode: select any date with dialog.
-	- Change the year using two digits and press enter.
-	- Change the year again using two digits and blur or press tab.
-	- Those dates should be changed correctly.
-- @OnChange: Add an @OnChange(OnChangeVoidAction.class) action to a date property. Use Order.	
-	- Lose the focus of date, without change it. @OnChange action not executed.
-	- Go to list mode. No "Data changed" message shown.
-	- Use the dialog to select the current date. @OnChange action not executed.
-	- Use the dialog to select any date. @OnChange action executed, one time.
-	- Select a different date using the dialog (it will execute the action), 
-		then enter and lose the focus of the date, it does not execute the action.
-- @OnChange: Add an @OnChange(OnChangeVoidAction.class) action to a time property. Use Shipment.
-	- Use the dialog to select the current date and lost focus. @OnChange action not executed.
-	- Use the dialog to select any date or time, the action should not executed, then enter or blur and the action executed.
-- Add "20" to year when two digits with 4 digits format (in Spanish):
-	- Type a date with only two digits for year and lose focus the 20 is
-		added (a 17 is turned in a 2017) and the rest of the date is not changed.
-	- Try to put the date in blank and lose focus, the date must be keep blank.
-- Add "20" to year when two digits with 4 digits format in DateTimeCombined (in English) with Shipment:
-	(the following test works with tab and blur but not with enter key yet)
-	- Edit the Shipment with date/time, it should have 4 digits for year.
-	- Change the year by a two digits value (like 17).
-	- It should be completed to four digits (2017) and not losing the hour value.
-	- Insert a space at the beginning of the date, then type other two year digits (like 15).
-	- It should be completed to four digits (2015) and not losing the hour value.
-- Adding separators when missing (use the second date in Quarter):
-	- In Spanish: 
-		 51106   -> 05/11/2006 		
-		051196   -> 05/11/1996
-		24022019 -> 24/02/2019
-		 7111999 -> 07/11/1999
-	- In English:
-		 32402   ->  3/24/2002
-	- Test some of the above cases in list filter.
-	- Test some of the above cases using enter key in list filter.
-- Validate date input and date number (use the second date in Quarter):
-	- In Spanish: 
-		put 51+06 then unfocus -> 05/1+/2006 -> When try to save should be show an error msg	
-		03/06/2010 change to 03/b6/2010 then unfocus, the date should not be autoformatted, should be the same 03/b6/2010 
-			then open calendar dialog, then unfocus calendar, focus input, unfocus input, the date should be the same too.
-		03/06/2010 change to 33/06/2010 then unfocus, the date should not be autoformatted, should be the same 33/06/2010
-	- In Chinese:
-		2010-6-3 to 2010-b-3 then unfocus, the date should not be autoformatted, should be the same 2010-b-3
-		2010-6-3 to 2010-6-33 then unfocus, the date should not be autoformatted, should be the same 2010-6-33
-- Year at beginning: Put the locale to South Africa
-	- Change the date with calendar. Date is kept correct, day is not turned in 4 digits.
-	- Modify the date with keyboard. Date is kept correct, day is not turned in 4 digits.
-	- Type 20170617. It is turned into 2017/06/17.	
-- Finish with separator: Put the locale to Serbian
-	- Change the date with calendar. Date is kept correct, 20 is not added to date.
-	- Alternate these below changes with enter, tab and blur
-	- Type:
-		 5.2.2017. -> 5.2.2017.
-		 5.2.2018  -> 5.2.2018.
-		 5.2.19.   -> 5.2.2019.
-		 5.2.17    -> 5.2.2017.
-		 05022018  -> 5.2.2018.
-		 050219    -> 5.2.2019.
-	- Go to Shipment
-	- Change the date and time with calendar. Date is kept correct, 20 is not added between date and time, time appears like "00:00" and not "00.00" in java 8
-	- Change (the following test works with tab and blur but not with enter key yet):
-		 25.12.2006. 11:33 to 25.12.18 05:05 -> 25.12.2018. 05:05
-- Time in DateTime separated, use ShipmentSeparatedTime in Spanish (withOut @OnChange in Shipment)
-	- Go to the first element and select any date using calendar, the time input should be empty
-	- Change the year of the date using input and 2 digit then press enter, the date should change correctly
-	- Type 12:12 in time then blur or enter, the date should not be changed
-	- Save and change the language to serbian, the time in list mode should be 12:12 and not 12.12 
-Use any entity with a date in list mode. Like Invoice filtering by date in list.
-- With = (calendar shown)
-- Change to year = (calendar not shown).
-- Type 2020. Lose focus: 2020 is kept.
-- With = type or choose a date (calendar shown).
-- Change to year = : Date is deleted (calendar not shown).
-- Type a year. Lose focus: Year is kept.
-- Change to = : Year is deleted (calendar shown).
-- Type a date without separators.
-- Change to  > : Date is kept (calendar shown).
-- Choose year = and type 2004. (calendar not shown).
-- Execute filter. (calendar not shown)
-- Type 2002 for year in date. Lose focus: 2002 is kept.
-- Change to = : Year is deleted (calendar shown).	 	
-		
